--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "morgan": "^1.9.1",
     "sqlite3": "^4.0.6"
   },
+  "resolutions": {
+    "minimist": "^1.2.2",
+    "set-value": "^2.0.1",
+    "acorn": "^6.4.1"
+  },
   "devDependencies": {
     "cross-env": "^5.2.0",
     "jest": "^24.0.0",
